--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -4,13 +4,12 @@
   "compilerOptions": {
     "outDir": "./out-tsc/app",
     "types": [
-      "node"
+      "@angular/localize"
     ]
   },
   "files": [
     "src/main.ts",
-    "src/main.server.ts",
-    "server.ts"
+
   ],
   "include": [
     "src/**/*.d.ts"
