--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,6 +18,7 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
+    "types": ["@angular/localize"],
     "useDefineForClassFields": false,
     "lib": [
       "ES2022",
